fixing mobile nav on iphone

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -68,7 +68,7 @@ header {
 }
 
 //should be 550px larger for testing
-@media all and (max-width:1000px) {
+@media all and (max-width:700px) {
   .site-header {
     justify-content:flex-start;
     flex-direction:row;
@@ -78,7 +78,7 @@ header {
   .blur-content {
     position:absolute;
     height:5000px;
-    width:5000px;
+    width:100vw;
     top:0;
     left:0;
     background:rgba(0,0,0,0.50);
@@ -89,9 +89,10 @@ header {
     a.toggle-nav {
       display:block;
       order:0 !important;
-      font-size:6em;
+      font-size:4.5rem;
       margin:0;
       padding:0 0.25em 0.15em 0.25em;  //NEED TO ALTER
+      overflow-y:auto;
     }
     .logo {
       order:1 !important;
@@ -107,6 +108,8 @@ header {
       font-size:1em;
       color:$blue;
       text-decoration:underline;
+      width:100%;
+      text-align:right;
     }
     .menu-nav-container {
       position:absolute;
@@ -124,13 +127,14 @@ header {
       li {
         display:block;
         padding:1em 0;
+        text-align:center;
       }
     }
     .toggle-open {
       position:fixed;
       left:0 !important;
       height:100%;
-      width:40%;
+      width:80vw;
     }
 
     .content-cover {
